# machine-learning-course

./: .gitignore  CMakeLists.txt  README.md
00-algorithms/: README.md  answer.csv  log.txt  ml-warm-up.py  sample.csv  test.csv  train.csv
01-cross-validation/: CMakeLists.txt  main.cpp  output.txt
02-f1-score/: CMakeLists.txt  input.txt  main.cpp  output.txt
03-metric-based-classification/: CMakeLists.txt  input.txt  main.cpp  output.txt
04-svm/: CMakeLists.txt  input.txt  main.cpp  output.txt
05-linear-regression/: CMakeLists.txt  input.txt  main.cpp  output.txt
06-decision-tree/: CMakeLists.txt  input.txt  main.cpp  output.txt
07-naive-bayes/: CMakeLists.txt  input.txt  main.cpp  output.txt
08-deep-neural-network/: CMakeLists.txt  input.txt  main.cpp  output.txt
09-logic-expression/: CMakeLists.txt  main.cpp
09-logic-regression/: CMakeLists.txt  input.txt  main.cpp  output.txt
10-chi-square/: CMakeLists.txt  main.cpp  output.txt
11-pearson-correlation/: CMakeLists.txt  input.txt  main.cpp
12-distance/: CMakeLists.txt  input.txt  main.cpp
13-conditional-entropy/: CMakeLists.txt  input.txt  main.cpp  output.txt
14-spearman-rank-correlation-coefficient/: CMakeLists.txt  input.txt  main.cpp  output.txt
15-conditional-variance/: CMakeLists.txt  input.txt  main.cpp  output.txt
labs/: Bayes Lab.docx  CV lab.docx  Chi2 lab.docx  Corr lab.docx  DE Lab.docx  DNN Lab.docx  DT Lab.docx  Dist lab.docx  Entr lab.docx  Fscore lab.docx  Knn lab.docx  Linear lab.docx  Logic Lab.docx  Rank lab.docx  SVM lab.docx  Var lab.docx  kaggle lab.docx
